style.css
*{
    margin: 0;
    padding: 0;
    font-family: Skyfont;
    box-sizing: border-box;
}
@font-face {
    font-family:Skyfont;
    src: url(./font/Skyscapers.ttf);
}
html , body{
    height: 100%;
    width: 100%;
}
.mini-circle{
    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
    width:10px;
    height: 10px;
    position: absolute;
    z-index: 99999;
    border-radius:50%;
    background-color: #fff;
}
.bounding{
    width: fit-content;
    overflow: hidden;
}
.bounding .boundingelem{
    transform: translateY(100%);
}
.main{
    width:100%;
    background-color: #000;
}
.hero{
    position: relative;
    width: 100%;
    color: #fff;
    height: 100vh;
    background-color: black;
}
.nav{
    width:100%;
    display:flex;
    justify-content: space-between;
    align-items: center;
    color:white;
    padding:20px 40px;
}
.nav a{
    text-decoration: none;
    font-size:18px;
    color: #fff;
}
.heading{
    margin-top:90px;
}
.heading h1{
    margin-left:30px;
    font-size:10vw;
    opacity: .6;
    text-transform: uppercase;
    line-height: 1;
}
.heading #secondh1{
    margin-left:230px;
}
.blocktext{
    width:fit-content;
    display: flex;
    flex-direction: column;
    align-items: end;
}
.blocktext h5{
text-align: right;
text-transform: uppercase;
font-size:17px;
}
.Mini-hedaing{
    display: flex;
    flex-direction: column;
    align-items: end;
    margin-top: 100px;
    padding:50px;
}
.Mini-hedaing h5{
    margin-top:.5VW;
    /* text-align: right; */
    text-transform: uppercase;
    font-size:1vw
}
.hero-footer{
    width:100%;
    padding:0 2vw;
    position: absolute;
    bottom:3%;
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.hero-footer a{
    color:#fff;
    text-transform: uppercase;
    text-decoration: none;
}
.hero-footer .iconset{
    display: flex;
    gap:5px;
}
.hero-footer .circle{
    display: flex;
    align-items: center;
    justify-content: center;
    width:25px;
    height:25px;
    border-radius:50%;
    background-color:#888;
}
.second{
    width: 100%;
    height: 100vh calc(100vh - 200px);
    color:#fff;
    padding-top: 200px;
    padding-right:10vw ;
    background-color: black;
}
.elem{
    width: 100%;
    border-top: 1px solid gray;
    padding: 3.5vw 3vw;
    padding-right:0;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.elem h1{
    text-transform: uppercase;
    font-size: 7.6vw;
    opacity:.7;
}
.elem h5{
    font-size:1.5vw;
}
.elem-last{
border-bottom: 1px solid gray;
}
.elem img{
    /* opacity: 1; */
    display: none;
    width:30%;
    height:20%;
    z-index: 999;
    position: absolute;
}
.about{
    width:100%;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    gap: 30px;
    color: #fff;
    padding: 10vw 10vw;
    padding-left: 35vw;
    background-color:black;
}
.textabout{
    width:30rem;
}
.textabout p{
    line-height:1.7;
    margin-bottom: 30px;
}
.about img{
    width: 300px;
}
.textabout a{
    padding:12px 22px;
    border: 1px solid gray;
    border-radius: 100px;
    color:#fff;
    font-size: 12px;
    text-decoration: none;
}
.textabout h5{
    text-transform: uppercase;
    font-size: large;
}
.subscribe{
    color: #fff;
    padding: 20px 30px;
    padding-bottom: 8vw;
    background-color: black;
}
.subscribe h5{
    text-transform: uppercase;
    opacity: .6;
    font-size: large;
}
.subscribe h3{
    text-transform: uppercase;
    font-size:1.5vw;
}
.footer{
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 40px 30px;
    background-color: black;
    color: #fff;
}
.footer a{
    text-transform: uppercase;
    font-size: 1.3vw;
    color: #fff;
    font-weight: 500;
    text-decoration: none;
}
.footerleft{
    display: flex;
    gap: 1.5vw;
    font-size:1.5vw;

}
.footerright{
    display: flex;
    gap: 1.5vw;
}
    

